--- a/css/style.production.css
+++ b/css/style.production.css
@@ -104,10 +104,6 @@ main {
 padding-left: 1.5rem;
 }
 
-form {
-padding-left: 1.5rem;
-}
-
 .profile__item:first-child {
   float: left;
   width: 250px;
@@ -196,16 +192,38 @@ padding-left: 1.5rem;
   transition: opacity 0.3s;
 }
 
+#contact-form__submit {
+  border: none;
+  font-family: inherit;
+  background-color: #007070;
+  color: #fff;
+  text-decoration: none;
+  padding: 15px 12px;
+  border-radius: 5px;
+  border-bottom: 2px solid rgba(0,0,0,0.3);
+  -webkit-transition: opacity 0.3s;
+  -o-transition: opacity 0.3s;
+  transition: opacity 0.3s;
+}
+
 .button:visited {
   color: #fff;
 }
 
-.button:hover, .button:focus {
+#contact-form__submit:visited {
+  color: #fff;
+}
+
+.button:hover, .button:focus, #contact-form__submit:hover, #contact-form__submit:focus {
   cursor: pointer;
   opacity: 0.7;
 }
 
-.button:active {
+.button:active  {
+  color: #fff;
+}
+
+#contact-form__submit:active  {
   color: #fff;
 }
 
@@ -396,6 +414,78 @@ padding-left: 1.5rem;
             margin-block-start: 0.5rem;
     -webkit-margin-after: 2rem;
             margin-block-end: 2rem;
+  }
+}
+
+.contact, #contact-form {
+  max-width: 400px;
+  margin: 3rem auto;
+  padding-left: 0;
+}
+
+#contact-address {
+  float: left;
+  margin-right: 3rem;
+}
+
+.standard-label {
+  display: block;
+}
+
+#contact-message__detail {
+  font-size: 12px;
+  -webkit-margin-before: 0;
+          margin-block-start: 0;
+  -webkit-margin-after: 0;
+          margin-block-end: 0;
+}
+
+.page-footer {
+  clear: both;
+}
+
+@supports (display: grid) {
+  .contact, #contact-form {
+    max-width: 400px;
+    margin: 3rem auto;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 2.5rem 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1rem 2.5rem;
+    padding-left: 0;
+  }
+
+  .contact__item:first-child {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-area: 1/1/1/3;
+    margin: 0;
+  }
+
+  #contact-form {
+    grid-gap: 1rem;
+  }
+
+  #contact-message__detail {
+    -ms-grid-row: 4;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-area: 4/2/4/3;
+    font-size: 12px;
+    -webkit-margin-before: 0;
+            margin-block-start: 0;
+    -webkit-margin-after: 0;
+            margin-block-end: 0;
+  }
+
+  .button-wrapper {
+    -ms-grid-row: 5;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-area: 5/1/5/3;
+    text-align: center;
   }
 }
 
