Moved social-media icon img sizes from html to css
-height/width added in html in Ex.1.2
-moved to working css file after running w3c validation

--- a/css/styles.css
+++ b/css/styles.css
@@ -158,6 +158,11 @@ padding-left: var(--standard-margin);
   opacity: 0.7;
 }
 
+.social-media__item-image {
+  width: 30px;
+  height: 30px;
+}
+
 .bio {
   text-align: center;
 }
