--- a/css/styles.css
+++ b/css/styles.css
@@ -316,10 +316,10 @@ padding-left: var(--standard-margin);
 
 .contact, #contact-form {
   max-width: 400px;
-  margin: 3rem auto;
+  margin: auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-gap: 1rem 2.5rem;
+  grid-gap: 0.75rem 2.5rem;
   padding-left: 0;
 }
 
@@ -332,15 +332,31 @@ padding-left: var(--standard-margin);
   grid-gap: 1rem;
 }
 
+#contact-form h2 {
+  margin-block-end: 0.75rem;
+}
+
+.standard-label {
+  padding: 0.5rem 0 0.25rem 0;
+}
+
+.standard-label:first-of-type {
+  padding-top: 0;
+}
+
+.required-input:after {
+  content: " *";
+  color: #dc143c;
+}
+
 #contact-message__detail {
-  grid-area: 4/2/4/3;
-  font-size: 12px;
+  font-size: 10px;
+  text-align: right;
   margin-block-start: 0;
-  margin-block-end: 0;
+  margin-block-end: 0.75rem;
 }
 
 .button-wrapper {
-  grid-area: 5/1/5/3;
   text-align: center;
 }
 
