Changed padding on submit button
-forgot to click on submit button changes in previous commit b7e0d2a

--- a/css/styles.css
+++ b/css/styles.css
@@ -360,6 +360,10 @@ padding-left: var(--standard-margin);
   text-align: center;
 }
 
+#contact-form__submit {
+  padding: 15px 18px;
+}
+
 @media (max-width: 500px) {
   .projects {
     grid-template-columns: 1fr;
