Added rotation to @keyframes cloud-rise to smooth jumpy animation in Firefox
-stack overflow recommends adding slight rotation with transformation to smooth animation
-also suggests using linear instead of ease but neither removes jumpy start

--- a/css/styles.css
+++ b/css/styles.css
@@ -225,10 +225,10 @@ padding-left: var(--standard-margin);
 
 @keyframes cloud-rise {
   from {
-    transform: translate(0, 0);
+    transform: translate(0, 0) rotate(0.1deg);
   }
   to {
-    transform: translate(-380px, 80px);
+    transform: translate(-380px, 80px) rotate(0.1deg);
   }
 }
 
