--- a/css/style.production.css
+++ b/css/style.production.css
@@ -166,6 +166,11 @@ padding-left: 1.5rem;
   opacity: 0.7;
 }
 
+.social-media__item-image {
+  width: 30px;
+  height: 30px;
+}
+
 .bio {
   text-align: center;
 }
@@ -260,35 +265,35 @@ padding-left: 1.5rem;
 }
 
 #path15372, #path15376 {
-  -webkit-animation: cloud-move 60s infinite alternate ease-in-out;
-          animation: cloud-move 60s infinite alternate ease-in-out;
+  -webkit-animation: cloud-move 80s infinite alternate ease-in-out;
+          animation: cloud-move 80s infinite alternate ease-in-out;
 }
 
 @-webkit-keyframes cloud-rise {
   from {
-    -webkit-transform: translate(0, 0);
-            transform: translate(0, 0);
+    -webkit-transform: translate(0, 0) rotate(0.1deg);
+            transform: translate(0, 0) rotate(0.1deg);
   }
   to {
-    -webkit-transform: translate(-380px, 80px);
-            transform: translate(-380px, 80px);
+    -webkit-transform: translate(-380px, 80px) rotate(0.1deg);
+            transform: translate(-380px, 80px) rotate(0.1deg);
   }
 }
 
 @keyframes cloud-rise {
   from {
-    -webkit-transform: translate(0, 0);
-            transform: translate(0, 0);
+    -webkit-transform: translate(0, 0) rotate(0.1deg);
+            transform: translate(0, 0) rotate(0.1deg);
   }
   to {
-    -webkit-transform: translate(-380px, 80px);
-            transform: translate(-380px, 80px);
+    -webkit-transform: translate(-380px, 80px) rotate(0.1deg);
+            transform: translate(-380px, 80px) rotate(0.1deg);
   }
 }
 
 #path14382, #path14386 {
-  -webkit-animation: cloud-rise 40s infinite alternate ease-in;
-          animation: cloud-rise 40s infinite alternate ease-in;
+  -webkit-animation: cloud-rise 65s infinite alternate ease;
+          animation: cloud-rise 65s infinite alternate ease;
 }
 
 @-webkit-keyframes cloud-circle-grow {
@@ -419,80 +424,75 @@ padding-left: 1.5rem;
 
 .contact, #contact-form {
   max-width: 400px;
-  margin: 3rem auto;
+  margin: auto;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 2.5rem 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 0.75rem 2.5rem;
   padding-left: 0;
 }
 
-#contact-address {
-  float: left;
-  margin-right: 3rem;
+.contact__item:first-child {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: 1/1/1/3;
+  margin: 0;
+}
+
+#contact-form {
+  -ms-grid-columns: 1fr;
+  grid-template-columns: 1fr;
+  grid-gap: 0;
+}
+
+#contact-form h2 {
+  -webkit-margin-after: 0.75rem;
+          margin-block-end: 0.75rem;
 }
 
 .standard-label {
-  display: block;
+  padding: 0.5rem 0 0.25rem 0;
+}
+
+.standard-label:first-of-type {
+  padding-top: 0;
+}
+
+.required-input:after {
+  content: " *";
+  color: #dc143c;
 }
 
 #contact-message__detail {
-  font-size: 12px;
+  font-size: 10px;
+  text-align: right;
   -webkit-margin-before: 0;
           margin-block-start: 0;
-  -webkit-margin-after: 0;
-          margin-block-end: 0;
+  -webkit-margin-after: 0.75rem;
+          margin-block-end: 0.75rem;
 }
 
-.page-footer {
-  clear: both;
+.button-wrapper {
+  text-align: center;
 }
 
-@supports (display: grid) {
-  .contact, #contact-form {
-    max-width: 400px;
-    margin: 3rem auto;
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 1fr 2.5rem 1fr;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 1rem 2.5rem;
-    padding-left: 0;
-  }
-
-  .contact__item:first-child {
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-area: 1/1/1/3;
-    margin: 0;
-  }
-
-  #contact-form {
-    grid-gap: 1rem;
-  }
-
-  #contact-message__detail {
-    -ms-grid-row: 4;
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-area: 4/2/4/3;
-    font-size: 12px;
-    -webkit-margin-before: 0;
-            margin-block-start: 0;
-    -webkit-margin-after: 0;
-            margin-block-end: 0;
-  }
-
-  .button-wrapper {
-    -ms-grid-row: 5;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-area: 5/1/5/3;
-    text-align: center;
-  }
+#contact-form__submit {
+  padding: 15px 18px;
 }
 
 @media (max-width: 500px) {
   .projects {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
+  }
+  .contact {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
+  .contact__item:first-child {
+    grid-area: auto/auto/auto/auto;
   }
 }
 
